chamando o script externo

--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exemplo1</title>
-    <!--Chamando script interno - cabeçalho-->
+    <!--Chamando script interno - cabeçalho
     <script>
         alert("Ola mundo-Cabeçalho!!!")
     </script>
+    -->
+    <!-- <script src="script.js" defer></script> -->
 </head>
 <body>
 
@@ -16,9 +18,11 @@
     
 
 
-    <script>
+    <!-- <script>
         //Chamando o script no corpo da página
         alert("Ola mundo-Corpo")
-    </script>
+    </script> -->
+
+    <script src="script.js"></script>
 </body>
 </html>
